creusot/tests/should_fail/ghost/non_terminating.stderr
error: `ghost!` block must not contain loops.
  --> non_terminating.rs:18:29
   |
18 |       let _g: GhostBox<i32> = ghost! {
   |  _____________________________^
19 | |         loop {}
20 | |     };
   | |_____^
   |
note: looping occurs here
  --> non_terminating.rs:19:9
   |
19 |         loop {}
   |         ^^^^^^^
   = note: this error originates in the macro `ghost` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Mutually recursive functions: when calling `f`...
  --> non_terminating.rs:13:1
   |
13 | fn f() {
   | ^^^^^^
   |
note: then `f` calls `recursive`...
  --> non_terminating.rs:14:5
   |
14 |     recursive();
   |     ^^^^^^^^^^^
note: finally `recursive` calls `f`.
  --> non_terminating.rs:7:9
   |
7  |         f();
   |         ^^^

error: aborting due to 2 previous errors

